why will this not fucking work changed a whole bunch of stuff maybe it'll work now

--- a/_posts/2012-04-08-markup.markdown
+++ b/_posts/2012-04-08-markup.markdown
@@ -5,7 +5,7 @@ description: "This lesson covers the basic terminology and fundamental syntax of
 category: fundamentals
 ---
 
-There are many versions of HTML, but the most current and increasingly used is the [HTML5 "Living Standard"](http://developers.whatwg.org/) specification. HTML5 evolved from the previous HTML 4.01 standard and was designed to be simple, powerful and backwards-compatible. This document uses HTML5 syntax, semantics and conventions throughout; the terms "HTML" and "HTML5" are used interchangeably.
+There are many versions of HTML, but the latest&mdash;and one that is becoming increasingly used&mdash;is the [HTML5 "Living Standard"](http://developers.whatwg.org/) specification. HTML5 evolved from the previous HTML 4.01 standard and was designed to be simple, powerful and backwards-compatible. This document uses HTML5 syntax, semantics and conventions throughout; the terms "HTML" and "HTML5" are used interchangeably.
 
 ## 1. Terminology
 
