--- a/_posts/2012-04-09-markup.markdown
+++ b/_posts/2012-04-09-markup.markdown
@@ -1,19 +1,27 @@
 ---
 layout: post
 title: Markup
-description: "This lesson covers the basic terminology and fundamental syntax of HTML. By the end of this lesson you will be able to create a simple webpage by hand."
+description: "Markup Fundamentals: this lesson is an introduction to basic terminology and the fundamental syntax of HTML. Web-Craft is an online curriculum written to help design students become fluent with the web."
 category: fundamentals
 ---
 
-There are many versions of HTML, but the latest&mdash;and one that is becoming increasingly used&mdash;is the [HTML5 "Living Standard"](http://developers.whatwg.org/) specification. HTML5 evolved from the previous HTML 4.01 standard and was designed to be simple, powerful and backwards-compatible. This document uses HTML5 syntax, semantics and conventions throughout; the terms "HTML" and "HTML5" are used interchangeably.
+This lesson will introduce you to basic terminology and the fundamental syntax of HTML.
 
-## 1. Terminology {: .hN .alpha #terminology}
 
-"HTML is a language for describing the structure of Web pages." - [W3C](http://w3.org)
+## 1. Terminology {: .hN .beta #terminology}
+
+There are many versions of HTML, but the latest&mdash;and one that is becoming increasingly used&mdash;is the [HTML5 "Living Standard"](http://developers.whatwg.org/). HTML5 evolved from earlier standards and was designed to be simple, powerful and backwards-compatible. This document uses HTML5 syntax, semantics and conventions throughout; the terms "HTML" and "HTML5" are used interchangeably.
+
+> HTML is a language for describing the structure of Web pages.
+> {: .freight .delta}
+> [W3C](http://w3.org)
+> {: .attribution .micro}
 
 The "M" in <abbr title="Hyper-Text Markup Language">HTML</abbr> stands for _markup_; writing HTML boils down to _marking up_ content to identify it and give it meaning, just like annotating a book.
 
-#### 1.1 Elements & Tags
+
+### 1.1 Elements & Tags {: .hN .gamma #elements-and-tags}
+
 HTML **elements** are used to mark up different content in a document and specify what each bit of content is supposed to be.	
 	
 	<div>
@@ -30,8 +38,10 @@ Some elements are made up of one, **self-closing tag**:
 
 Both lines in the above example are correct. An optional forward slash (`/`) can be written before the closing bracket in a self-closing tag, though it is only necessary when using a non-HTML5 [doctype](#).
 
-#### 1.2 Attributes
-While elements define the actual content, **attributes** define extra information about those elements, such as the location of a source file or a class/id name. Attributes are always written inside the angle brackets of a tag - _never_ between tags or in a closing tag.
+
+### 1.2 Attributes {: .hN .gamma #attributes}
+
+While elements define the actual content, **attributes** define extra information about those elements, such as the location of a source file or a class/id name. Attributes are always written inside the angle brackets of a tag, _never_ between tags or in a closing tag.
 	
 	<div id="container">…</div>
 
@@ -39,28 +49,35 @@ Attributes have a **name** and a **value**., which are separated by an equals si
 
 	<div class="container alpha">...</div>
 
-#### 1.3 Comments
+
+### 1.3 Comments {: .hN .gamma #comments}
+
 Comments are pieces of text within the HTML document that are hidden from the browser. They serve as notes and explanations for the surrounding code. To leave a comment in HTML:
 
 	<!-- I am a comment, wrapped in this funky string of symbols -->
 
-## 2. Structure
 
-In theory, an appropriate file extension (`.html`, `.htm`) is all that a browser requires to read a document as HTML. However, HTML is a standardized language and browsers cannot properly parse a document if the proper syntax and structure isn't used. A well-formed HTML document requires the following:
+## 2. Structure {: .hN .beta #structure}
+
+In theory, an appropriate file extension (`.html`, `.htm`) is all that a browser requires to read a document as HTML. However, HTML is a formal language and errors occur if the proper syntax and structure isn't used. A well-formed HTML document requires the following:
 
 1. A `doctype` declaration
 2. The `html` root element
 3. The `head` element
 4. The `body` sectioning element 
 
-#### 2.1 `doctype`
+
+### 2.1 `doctype` {: .hN .gamma #doctype}
+
 A `doctype` declaration is used to instruct browsers which version of HTML is being used, and should be on the first line of an HTML document. Declaring a `doctype` always begins with an exclamation mark (`!`) character and is placed inside angle brackets (`< >`). This is the HTML5 `doctype`:
 
 	<!doctype html>
 
 "A `doctype` is necessary to force browsers to render in standards mode and prevent quirks-mode headaches in Internet Explorer." - Mark Brown, http://www.yellowshoe.com.au/standards/
 
-#### 2.2 `<html>`
+
+### 2.2 `<html>` {: .hN .gamma #html-element}
+
 `html` is the document _root_, or the top-most element on the page (after `doctype`, which is not an element). It is written with opening and closing tags, marking the beginning and end of the HTML document. The `html` element contains all other elements; nothing can be written after the `</html>` tag. 
 
 	<!doctype html>
@@ -76,7 +93,9 @@ While not required to validate, the `lang` attribute specifies the primary langu
 
 The `html` tag can be partially styled with CSS. As a general guide, typographic and background/color styles are accepted, while layout and box-model styles are not (see CSS).
 
-#### 2.3 `<head>`
+
+### 2.3 `<head>` {: .hN .gamma #head-element}
+
 The first element inside `<html>` is always the `head` element. It is not rendered by the browser; it contains any metadata for the HTML document, along with links to external resources like scripts or stylesheets. 
 
 	<html lang="en">
@@ -86,7 +105,7 @@ The first element inside `<html>` is always the `head` element. It is not render
 
 The `<head>` often contains two metadata elements, one of which is required - `title`. The `title` element represents the overarching title or name of the page.
 
-	<title>Waldo's Widget Win-porium</title>
+	<title>Waldo's Widget Emporium</title>
 
 "The document's title is often different from its first heading, since the first heading does not have to stand alone when taken out of context." - [WHATWG](http://developers.whatwg.org/semantics.html)
 
@@ -98,16 +117,19 @@ The `meta` element is used to add different kinds of meta-information to the doc
 
 Character encoding should always be explicitly set with `meta charset` to prevent rendering errors. To validate and preserve compatibility with legacy browsers, this element must fit within the first 1024 bytes of the page.
 
-#### 2.4 `body`
+
+### 2.4 `body` {: .hN .gamma #body-element}
+
 The `body` element represents the main content of the document, everything that is visible on the page. There can only be one `body` element, and it must be inside the `html` element below the `head`.
 
 		<body>
 			<!-- content goes here -->
 		</body>
 
-The `body` element accepts `class` and `id` attributes (along with [others](http://developers.whatwg.org/elements.html#global-attributes)) and can be styled with CSS.
+The `body` element accepts `class` and `id` attributes (along with [others](http://developers.whatwg.org/elements.html#global-attributes)) and can be styled with <abbr title="Cascading Style Sheets">CSS</abbr>.
 
-#### 2.5 Putting it all together
+
+### 2.5 Putting it all together {: .hN .gamma #putting-it-all-together}
 
 	<!doctype html>
 	<html lang="en">
@@ -120,4 +142,6 @@ The `body` element accepts `class` and `id` attributes (along with [others](http
 		</body>
 	</html>
 
-You've learned how to create the basic document tree for a valid HTML5 page. Congratulations! Next up: [Marking Up Content](#).
+Congratulations, you've written a valid HTML5 document&mdash;too bad it's empty! Why not dive into the [pattern library]({{ site.baseurl }}/patterns) and hone your skills on [marking up a simple blog post]({{ site.baseurl }}/patterns/blog-entry). 
+
+If you're not comfortable with the basics of CSS (or don't know what that is), you should read [CSS Fundamentals]({{ site.baseurl }}/fundamentals/style) before following tutorials in the pattern library.
