mega updates, site looks good, added social share buttons

--- a/_posts/2012-04-09-markup.markdown
+++ b/_posts/2012-04-09-markup.markdown
@@ -4,10 +4,9 @@ title: Markup
 description: "Markup Fundamentals: this lesson is an introduction to basic terminology and the fundamental syntax of HTML. Web-Craft is an online curriculum written to help design students become fluent with the web."
 category: fundamentals
 ---
-
 This lesson will introduce you to basic terminology and the fundamental syntax of HTML.
 
-
+<!-- more start -->
 ## 1. Terminology {: .hN .beta #terminology}
 
 There are many versions of HTML, but the latest&mdash;and one that is becoming increasingly used&mdash;is the [HTML5 "Living Standard"](http://developers.whatwg.org/). HTML5 evolved from earlier standards and was designed to be simple, powerful and backwards-compatible. This document uses HTML5 syntax, semantics and conventions throughout; the terms "HTML" and "HTML5" are used interchangeably.
@@ -143,3 +142,16 @@ The `body` element accepts `class` and `id` attributes (along with [others](http
 	</html>
 
 Congratulations, you've written a valid HTML5 document&mdash;too bad it's empty! Why not dive into the [pattern library]({{ site.baseurl }}/patterns) and hone your skills on [marking up a simple blog post]({{ site.baseurl }}/patterns/blog-entry). If you're not comfortable with the basics of CSS (or don't know what that is), you should read [CSS Fundamentals]({{ site.baseurl }}/fundamentals/style) before following tutorials in the pattern library.
+
+
+### Sources & further reading {: .hN .gamma #further-reading}
+
+-	[Terminology and Syntax Intro](http://learn.shayhowe.com/html-css/terminology-syntax-intro/)
+-	[Dive into HTML5: Semantics](http://mislav.uniqpath.com/diveintohtml5/semantics.html)	
+-	[Opera Dev: The Web Standards Model](http://dev.opera.com/articles/view/4-the-web-standards-model-html-css-a)
+-	[HTML5 Doctor: Element Index](http://html5doctor.com/)
+-	[HTML5 Doctor: Common HTML Mistakes](http://html5doctor.com/avoiding-common-html5-mistakes/)
+-	[Developing with Web Standards](http://www.456bereastreet.com/lab/developing_with_web_standards/structure/)
+-	[WHATWG: HTML5 For Developers](http://developers.whatwg.org/)
+
+<!-- more end -->
