--- a/_posts/2012-04-09-markup.markdown
+++ b/_posts/2012-04-09-markup.markdown
@@ -24,16 +24,19 @@ The "M" in <abbr title="Hyper-Text Markup Language">HTML</abbr> stands for _mark
 HTML **elements** are used to mark up different content in a document and specify what each bit of content is supposed to be.	
 	
 	<div>
+{: .prettyprint}
 
 Elements are composed of a **start tag** and an **end tag**. Tags are always surrounded by a set of angle brackets. Naturally, opening tags mark the beginning of an element; closing tags mark the end of an element and must begin with a forward slash:
 
 	<h1>This is a level 1 header</h1>
 	<p>this is text in a paragraph.</p>
+{: .prettyprint}
 
 Some elements are made up of one, **self-closing tag**:
 
 	<img src="image.jpg">
 	<img src="image.jpg" />
+{: .prettyprint}
 
 Both lines in the above example are correct. An optional forward slash (`/`) can be written before the closing bracket in a self-closing tag, though it is only necessary when using a non-HTML5 [doctype](#).
 
@@ -43,10 +46,12 @@ Both lines in the above example are correct. An optional forward slash (`/`) can
 While elements define the actual content, **attributes** define extra information about those elements, such as the location of a source file or a class/id name. Attributes are always written inside the angle brackets of a tag, _never_ between tags or in a closing tag.
 	
 	<div id="container">…</div>
+{: .prettyprint}
 
 Attributes have a **name** and a **value**., which are separated by an equals sign (`=`). In the above example, the `div` element has been given an `id` attribute with a value of "container". An attribute can only be defined once in a single tag, but some attributes allow multiple values:
 
 	<div class="container alpha">...</div>
+{: .prettyprint}
 
 
 ### 1.3 Comments {: .hN .gamma #comments}
@@ -54,6 +59,7 @@ Attributes have a **name** and a **value**., which are separated by an equals si
 Comments are pieces of text within the HTML document that are hidden from the browser. They serve as notes and explanations for the surrounding code. To leave a comment in HTML:
 
 	<!-- I am a comment, wrapped in this funky string of symbols -->
+{: .prettyprint}
 
 
 ## 2. Structure {: .hN .beta #structure}
@@ -71,6 +77,7 @@ In theory, an appropriate file extension (`.html`, `.htm`) is all that a browser
 A `doctype` declaration is used to instruct browsers which version of HTML is being used, and should be on the first line of an HTML document. Declaring a `doctype` always begins with an exclamation mark (`!`) character and is placed inside angle brackets (`< >`). This is the HTML5 `doctype`:
 
 	<!doctype html>
+{: .prettyprint}
 
 "A `doctype` is necessary to force browsers to render in standards mode and prevent quirks-mode headaches in Internet Explorer." - Mark Brown, http://www.yellowshoe.com.au/standards/
 
@@ -83,6 +90,7 @@ A `doctype` declaration is used to instruct browsers which version of HTML is be
 	<html>
 		<!-- everything else goes in here -->
 	</html>
+{: .prettyprint}
 
 The `html` element accepts attributes (like `class`) but often only specifies the `lang` attribute.
  
@@ -101,16 +109,19 @@ The first element inside `<html>` is always the `head` element. It is not render
 		<head>
 			…
 		</head>
+{: .prettyprint}
 
 The `<head>` often contains two metadata elements, one of which is required - `title`. The `title` element represents the overarching title or name of the page.
 
 	<title>Waldo's Widget Emporium</title>
+{: .prettyprint}
 
 "The document's title is often different from its first heading, since the first heading does not have to stand alone when taken out of context." - [WHATWG](http://developers.whatwg.org/semantics.html)
 
 The second recommended element is a "character encoding declaration":
 
 	<meta charset="utf-8">
+{: .prettyprint}
 
 The `meta` element is used to add different kinds of meta-information to the document. Using the `charset` attribute, it specifies the type of character encoding used on the page - in the example above, UTF-8. UTF-8, or Unicode, is a world-wide standard and a sensible default.
 
@@ -124,6 +135,7 @@ The `body` element represents the main content of the document, everything that 
 		<body>
 			<!-- content goes here -->
 		</body>
+{: .prettyprint}
 
 The `body` element accepts `class` and `id` attributes (along with [others](http://developers.whatwg.org/elements.html#global-attributes)) and can be styled with <abbr title="Cascading Style Sheets">CSS</abbr>.
 
@@ -140,6 +152,7 @@ The `body` element accepts `class` and `id` attributes (along with [others](http
 			<!-- content goes here -->
 		</body>
 	</html>
+{: .prettyprint}
 
 Congratulations, you've written a valid HTML5 document&mdash;too bad it's empty! Why not hone your skills [marking up a simple blog post]({{ site.baseurl }}/patterns/blog-entry), or brush up on your [HTML Etiquette]({{ site.baseurl }}/fundamentals/coding-conventions#html-etiquette).
 
