--- a/_posts/2012-04-09-style.markdown
+++ b/_posts/2012-04-09-style.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: documentation
 title: Style
 description: "This lesson covers the basic terminology and fundamental syntax of CSS. By the end of this lesson you will be able to change the visual design of your webpages."
 category: fundamentals
